fix middle align

--- a/frontend/src/metabase/visualizations/components/Table/cell/BodyCell.module.css
+++ b/frontend/src/metabase/visualizations/components/Table/cell/BodyCell.module.css
@@ -40,13 +40,3 @@
   text-overflow: ellipsis;
   text-align: center;
 }
-
-.alignLeft {
-  text-align: left;
-  justify-content: left;
-}
-
-.alignRight {
-  text-align: right;
-  justify-content: right;
-}
